# llm-test-case-agent

./: .env.example  .gitignore  .replit  ARCHITECTURE.md  CODEBASE_MODE_USAGE.md  FEATURE_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  app-gradio.py  app-streamlit.py  app.py  config.py  excel-app.py  main.py  pyproject.toml  requirements.txt  setup.sh
agents/: __init__.py  coverage_analyzer.py  orchestrator.py  test_generator.py  validator.py
docs/: google-genai-function-call.txt  google-genai.txt  gradio-agents-and-tool-usage.txt  gradio-chatbot-specific-events.txt  gradio-creating-a-chatbot-fast.txt  gradio-quickstart.txt  test-spec-template.txt
examples/: EXAMPLE_SUMMARY.md  README.md  codebase_analysis_example.py  example_generated_tests.py  example_user_registration.md  user_story.txt
examples/login_app/: README.md  app.py
examples/login_app/data/: users.json
examples/login_app/static/: styles.css
examples/login_app/templates/: dashboard.html  login.html
examples/sample_codebase/: README.md
examples/sample_codebase/src/: __init__.py
examples/sample_codebase/src/auth/: __init__.py  exceptions.py  (+1 more)
exporters/: __init__.py  csv_exporter.py  json_exporter.py  pdf_exporter.py  python_exporter.py  zip_exporter.py
pages/: 1_Documentation_Generation.py  2_Code_Generation.py
parsers/: __init__.py  code_parser.py  codebase_analyzer.py  user_story_parser.py
prompts/: __init__.py  clarification_prompts.py  critique_prompts.py  generation_prompts.py
ui/: __init__.py  chat_interface.py  visualization.py
(+2 files in other folders)
